[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mtobjects"
version = "0.1.0"
description = "Max-tree based object detection and parameter extraction"
authors = [{name = "Caroline Haigh", email = "caroline@example.com"}]
license = {text = "MIT"}
readme = "README.rst"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "astropy",
    "Pillow",
    "scikit-image",
    "matplotlib",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/PabloMSanAla/mtobjects"
Repository = "https://github.com/PabloMSanAla/mtobjects"

[tool.setuptools.packages.find]
include = ["mtolib*", "mto*"]

[tool.setuptools.package-data]
mtolib = ["lib/*.so", "src/*.c", "src/*.h"]
"*" = ["Makefile"]
